--- a/Editor/com.stinkysteak.android-library-cleaner.asmdef
+++ b/Editor/com.stinkysteak.android-library-cleaner.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "com.stinkysteak.android-library-cleaner"
+    "name": "com.stinkysteak.android-library-cleaner",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
